// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Duplicate Button should render 1`] = `
<DuplicateButton
  data-test="foo"
  onClick={[MockFunction]}
  withText={true}
/>
`;

exports[`Duplicate Button should render without duplicate text when asked to 1`] = `
<DuplicateButton
  data-test="foo"
  onClick={[MockFunction]}
  withText={false}
/>
`;
